corrected card header alignment

--- a/www/sass/index.scss
+++ b/www/sass/index.scss
@@ -171,7 +171,7 @@ body,
       right: $header-padding;
       top: $header-padding;
     }
-    .back-button{
+    .home-button{
       position: absolute;
       left: $header-padding;
       top: $header-padding;
